depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1
spec:
  selector:
    matchLabels:
      name: project1
  template:
    metadata:
      labels:
        name: project1
    spec:
      containers:
      - name: project1
        image: nginx:1.25.3
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
